--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             <!-- Button Grid Container -->
             <div id="button-grid" class="p-8 h-full">
                 <div class="grid grid-cols-3 grid-rows-2 gap-6 h-full items-center">
-                    <button data-modal-target="items-modal" class="h-16 bg-gradient-to-b from-blue-400 to-blue-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-blue-500 hover:to-blue-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Items</button>
+                    <button data-modal-target="items-modal" class="h-16 bg-gradient-to-b from-amber-600 to-amber-800 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-amber-700 hover:to-amber-900 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75 text-4xl">🏪</button>
                     <button id="spin-button" class="bg-gradient-to-b from-green-400 to-green-600 text-white font-bold rounded-full aspect-square border-2 border-black shadow-[10px_10px_0px_#000] hover:from-green-500 hover:to-green-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75 flex items-center justify-center">Spin</button>
                     <!-- Changed "Map" button to a moon emoji -->
-                    <button data-modal-target="map-modal" class="h-16 bg-gradient-to-b from-yellow-400 to-yellow-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-yellow-500 hover:to-yellow-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75 text-4xl">🌙</button>
+                    <button data-modal-target="map-modal" class="h-16 bg-gradient-to-b from-indigo-700 to-indigo-900 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-indigo-800 hover:to-indigo-900 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75 text-4xl">🌙</button>
                     <button data-modal-target="equip-modal" class="h-16 bg-gradient-to-b from-purple-400 to-purple-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-purple-500 hover:to-purple-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Equip</button>
                     <button data-modal-target="quests-modal" class="h-16 bg-gradient-to-b from-red-400 to-red-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-red-500 hover:to-red-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Quests</button>
                     <button data-modal-target="system-modal" class="h-16 bg-gradient-to-b from-indigo-400 to-indigo-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-indigo-500 hover:to-indigo-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">System</button>
@@ -143,7 +143,7 @@
             
             <!-- Modals -->
             <!-- Updated Items Modal with Carousel -->
-            <div id="items-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-blue-400 to-blue-600 text-white flex flex-col items-center justify-center text-center">
+            <div id="items-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-amber-600 to-amber-800 text-white flex flex-col items-center justify-center text-center">
                 <button class="close-modal absolute top-4 right-4 text-white font-bold text-3xl leading-none hover:text-gray-300">&times;</button>
                 <h2 class="text-3xl font-bold mb-4">Items</h2>
                 <div class="relative w-full flex items-center justify-center py-4">
@@ -158,7 +158,7 @@
                 </div>
             </div>
 
-            <div id="map-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-yellow-400 to-yellow-600 text-white flex flex-col items-center justify-center text-center">
+            <div id="map-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-indigo-700 to-indigo-900 text-white flex flex-col items-center justify-center text-center">
                 <button class="close-modal absolute top-4 right-4 text-white font-bold text-3xl leading-none hover:text-gray-300">&times;</button>
                 <h2 class="text-3xl font-bold mb-4">Map</h2>
                 <p>The world map will be displayed here.</p>
@@ -380,4 +380,5 @@
     </script>
 </body>
 </html>
+
 
