--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                 </div>
             </div>
             <!-- Bottom half for enemy info -->
-            <div class="h-1/2 pt-4">
-                <div id="enemy-info-area" class="flex w-full justify-around text-white hidden">
+            <div class="h-1/2 pt-4 flex justify-center items-start">
+                <div id="enemy-info-area" class="flex space-x-4 text-white hidden">
                     <!-- Enemy 1 Info -->
                     <div id="enemy-info-1" class="text-center w-24">
                         <div class="relative w-full bg-black rounded-full h-4 border-2 border-gray-600 mb-1">
@@ -325,5 +325,6 @@
     </script>
 </body>
 </html>
+
 
 
