--- a/index.html
+++ b/index.html
@@ -229,9 +229,12 @@
                         </div>
                     </div>
                     <!-- Item Info Area -->
-                    <div class="h-1/2 w-full flex flex-col items-center justify-center text-center text-white p-4">
-                        <h3 id="item-title" class="text-3xl font-bold mb-2 text-shadow-lg"></h3>
-                        <p id="item-description" class="text-lg"></p>
+                    <div class="h-1/2 w-full flex flex-col items-center justify-center text-center text-white p-4 relative">
+                        <h3 id="item-title" class="text-2xl font-bold mb-2 text-shadow-lg"></h3>
+                        <p id="item-description" class="text-base"></p>
+                        <button id="buy-item-btn" class="absolute bottom-4 right-5 bg-green-500 text-white font-bold py-2 px-4 rounded-md border border-black shadow-[4px_4px_0px_#000] hover:bg-green-600 active:shadow-none active:translate-x-1 active:translate-y-1 transition-all text-xl">
+                            5🪙
+                        </button>
                     </div>
                 </div>
                 <button class="close-modal-btn absolute left-1/2 -translate-x-1/2 -top-20 w-14 h-14 bg-gray-900 text-white text-3xl font-bold rounded-full border-4 border-gray-600 flex items-center justify-center hover:bg-gray-700 active:bg-gray-800 transition-colors">&times;</button>
@@ -537,4 +540,6 @@
     </script>
 </body>
 </html>
+
+
 
