--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <div class="h-1/2 w-full flex flex-col items-center justify-center text-center text-white p-4 relative">
                         <h3 id="item-title" class="text-2xl font-bold mb-2 text-shadow-lg"></h3>
                         <p id="item-description" class="text-base"></p>
-                        <button id="buy-item-btn" class="absolute bottom-4 right-5 bg-green-500 text-white font-bold py-2 px-4 rounded-md border border-black shadow-[4px_4px_0px_#000] hover:bg-green-600 active:shadow-none active:translate-x-1 active:translate-y-1 transition-all text-xl">
+                        <button id="buy-item-btn" class="absolute bottom-4 right-5 bg-green-500 text-white font-bold w-14 h-14 flex items-center justify-center rounded-md border border-black shadow-[4px_4px_0px_#000] hover:bg-green-600 active:shadow-none active:translate-x-1 active:translate-y-1 transition-all text-xl">
                             5🪙
                         </button>
                     </div>
@@ -540,6 +540,7 @@
     </script>
 </body>
 </html>
+
 
 
 
