--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         }
         .shop-item {
             scroll-snap-align: center;
+            /* ADDED: Drop shadow to match button aesthetic */
+            text-shadow: 5px 5px 0px #000;
         }
     </style>
 </head>
@@ -540,6 +542,7 @@
     </script>
 </body>
 </html>
+
 
 
 
